// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> should render 1`] = `
<DocumentFragment>
  <svg
    class="lib:w-em lib:h-em lib:inline-block lib:leading-em lib:flex-shrink-0 lib:text-current lib:align-middle"
    data-testid="testid-icon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <g
      stroke="currentColor"
      stroke-width="1.5"
    >
      <path
        d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
        fill="none"
        stroke-linecap="round"
      />
      <path
        d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
        fill="currentColor"
        stroke-linecap="round"
      />
      <circle
        cx="12"
        cy="12"
        fill="none"
        r="11.25"
        stroke-miterlimit="10"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`<Icon /> should render as expected with component as div 1`] = `
<div>
  <div
    class="lib:w-em lib:h-em lib:inline-block lib:leading-em lib:flex-shrink-0 lib:text-current lib:align-middle"
    data-testid="testid-icon"
    focusable="false"
    viewbox="0 0 24 24"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 100 100"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M352 128h-96V32c0-17.67-14.33-32-32-32h-64c-17.67 0-32 14.33-32 32v96H32c-17.67 0-32 14.33-32 32v64c0 17.67 14.33 32 32 32h96v224c0 17.67 14.33 32 32 32h64c17.67 0 32-14.33 32-32V256h96c17.67 0 32-14.33 32-32v-64c0-17.67-14.33-32-32-32z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Icon /> should render custom svg icon 1`] = `
<div>
  <svg
    viewBox="0 0 100 100"
  >
    <path
      d="M12"
    />
  </svg>
</div>
`;
